# Statistics-ML

./: LICENSE  README.md  main.py  pyproject.toml
src/core_math/ml/: distances.py
src/core_math/ml/neighbors/: kmeans.py
src/libs/core_math/ml/neighbors/: kmeans.py
src/tests/core_math/ml/: test_distance.py  test_distances.py
src/tools/core_math/: main.py
src/tools/core_math/models/: schema_kmeans.py
src/tools/core_math/routers/: router_kmeans.py
