[project]
name = "statistics-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.4.1",
    "pre-commit>=4.5.1",
    "pytest-mock>=3.15.1",
    "pytest>=9.0.2",
    "ruff>=0.14.14",
    "fastapi>=0.129.0",
]

[tool.pytest.ini_options]
pythonpath = "."

[tool.setuptools.packages.find]
where = ["."]
